--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the bookmarks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+// new bookmark
+#bookmark-title {
+  position: absolute;
+  top: 70px;
+  left: 25px;
+}
