--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the lists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+// new list
+#new-title {
+  position: absolute;
+  top: 70px;
+  left: 25px;
+}
+#form {
+  position: absolute;
+  top: 150px;
+  left: 25px;
+}
+// show list
+#list-name {
+  position: absolute;
+  top: 70px;
+  left: 25px;
+}
+#movie-title {
+  position: absolute;
+  top: 150px;
+  left: 25px;
+}
+#movie-comment {
+  position: absolute;
+  top: 200px;
+  left: 25px;
+}
+#new-bookmark {
+  position: absolute;
+  top: 250px;
+  left: 25px;
+}
